--- a/style.css
+++ b/style.css
@@ -1,14 +1,10 @@
-
-.container {
+.flex-container {
     display: flex;
-    flex-wrap: wrap;
-    width: 320px; /* Adjust as needed */
   }
   
-  .grid-square {
-    width: 20px;
-    height: 20px;
-    border: 1px solid #000;
-    box-sizing: border-box;
+  /* this selector selects all divs inside of .flex-container */
+  .flex-container div {
+    border: 4px solid black;
+    height: 100px;
+    flex: 1 1 0%;
   }
-  
